--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
 env:
   global:
    - JAVA_HOME=/usr/lib/jvm/java-7-oracle
-   - LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${JAVA_HOME}/jre/lib/amd64/server
+   - LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${JAVA_HOME}/jre/lib/amd64/server:${HOME}/geowave-plugin/mason-packages/.link/lib
 
 addons:
   apt:
