--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 env:
   global:
    - JAVA_HOME=/usr/lib/jvm/java-7-oracle
-   - LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${JAVA_HOME}/jre/lib/amd64/server:${HOME}/geowave-plugin/mason_packages/.link/lib
+   - LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${JAVA_HOME}/jre/lib/amd64/server:${TRAVIS_BUILD_DIR}/geowave-plugin/mason_packages/.link/lib
 
 addons:
   apt:
@@ -41,4 +41,4 @@ script:
  - make test
  - ./test/geowave geowave_stop
  - ls -ltr ./mason_packages/.link/lib/libmapnik*
- - ls -ltr ${HOME}/geowave-plugin/mason_packages/.link/lib
+ - ls -ltr ${TRAVIS_BUILD_DIR}/geowave-plugin/mason_packages/.link/lib
